# finance_control

./: .gitignore  LICENSE  README.md  pyproject.toml
account/: Dockerfile  go.mod  go.sum  main.go
account/controllers/: health.go  userController.go
account/controllers/schemas/: userSchema.go
account/initializers/: db.go  env.go  kafka.go  syncDB.go  userservice.go
account/models/: userModel.go
account/proto-definitions/: user.pb.go
account/service/: errorHandler.go  kafkaService.go  userService.go
account/tests/: create_account_and_login.lua  login_test.lua
bot/: .env.dist  app.py  loader.py  pyproject.toml
bot/data/: config.py  text_config.py
bot/handlers/errors/: error_handler.py
bot/handlers/users/: __init__.py  help.py
bot/keyboards/inline/: user_keyboards.py
bot/middlewares/: throttling.py
bot/migrations/: env.py
bot/migrations/versions/: 9cd5ea2daccf_create_users_table.py
bot/utils/: EventManager.py  notify_admins.py  set_bot_commands.py
bot/utils/db_api/: db.py  db_commands.py
bot/utils/db_api/models/: models.py
bot/utils/misc/: logging.py
core/: Dockerfile  pyproject.toml  requirements.txt
core/src/app/: loaders.py  main.py  settings.py
deploy/: config.yaml  docker-compose.yaml
deploy/krakend/: jwk.json  krakend.json
proto/: user.proto
src/: alembic.ini
src/app/: .example.env  db.py  main.py  security.py  settings.py
src/migrations/: env.py
src/migrations/versions/: 0cd8c5e1d5d5_init_template_db.py  0d4baae8a99b_fix_forigen_key.py  64b079152597_add_operation_and_category_tables.py  789977fb08d3_fk_fix.py  (+6 more)
(+42 files in other folders)
